# testcontainers-bazel7-demo

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  maven_install.json
.github/workflows/: ci.yml
customers/src/test/java/com/testcontainers/demo/: DummyTest.java
products/: BUILD.bazel
